--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "classnames": "^2.3.1",
     "flowbite": "^1.4.4",
+    "instagram-basic-display": "^1.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-juicer-feed": "^0.0.2-alpha-4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
